src/platformsupport/dnd/dnd.pri
@@ -1,6 +1,0 @@
-HEADERS += \
-    $$PWD/qsimpledrag_p.h \
-    $$PWD/qshapedpixmapdndwindow_p.h
-SOURCES += \
-    $$PWD/qsimpledrag.cpp \
-    $$PWD/qshapedpixmapdndwindow.cpp
